--- a/src/css/payment.css
+++ b/src/css/payment.css
@@ -16,7 +16,6 @@ html, body {
 .payment-form {
     background-color: white;
     width: 600px;
-    height: 400px;
     border-radius: 30px;
     margin-bottom: 10px;
 }
@@ -83,10 +82,49 @@ form .right-col {
 .date-cvv {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 10px;
 }
 
 .card-details {
     width: 20%;
     text-align: center;
+}
+
+.totals {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.row {
+    display: flex;
+    width: 80%;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.row p, h5 {
+    margin-top: 0px;
+}
+
+.btn-row {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    justify-content: center;
+}
+
+.btn-row button {
+    border: none;
+    padding: 10px;
+    background-color: rgb(52, 52, 123);
+    color: white;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+
+.btn-row button:hover {
+    scale: 1.1;
+    cursor: pointer;
 }
