--- a/src/css/login.css
+++ b/src/css/login.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: center;
     padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 h1 {
@@ -113,3 +114,43 @@ p {
     gap: 12px;
     color: rgb(65, 65, 124);
 }
+
+svg {
+    width: 2.25em;
+    display: none;
+    transform-origin: center;
+    animation: rotate4 2s linear infinite;
+   }
+   
+   circle {
+    fill: none;
+    stroke: hsl(214, 97%, 59%);
+    stroke-width: 2;
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+    stroke-linecap: round;
+    animation: dash4 1.5s ease-in-out infinite;
+   }
+   
+   @keyframes rotate4 {
+    100% {
+     transform: rotate(360deg);
+    }
+   }
+   
+   @keyframes dash4 {
+    0% {
+     stroke-dasharray: 1, 200;
+     stroke-dashoffset: 0;
+    }
+   
+    50% {
+     stroke-dasharray: 90, 200;
+     stroke-dashoffset: -35px;
+    }
+   
+    100% {
+     stroke-dashoffset: -125px;
+    }
+   }
+   
