--- a/src/css/products.css
+++ b/src/css/products.css
@@ -77,6 +77,7 @@
     text-align: center;
     font-size: 16px;
     color: red;
+    font-weight:bold;
 
  }
 
@@ -108,6 +109,7 @@
   .pretext{
     color:#fff;
     background:#06dd2a;
+    font-weight:bold;
     position:absolute;
     top:0;
     left:0;
@@ -120,6 +122,6 @@
   }
   i{
     margin-right:10px;
-    font-size: 13px;
+    font-size: 15px;
   }
  
