--- a/src/css/products.css
+++ b/src/css/products.css
@@ -9,7 +9,7 @@
 .products-block .title{
     margin-top: 35px;
     font-weight: 700;
-    font-size: 30px;
+    font-size: 35px;
     text-align: center;
     color: black;
 
@@ -36,7 +36,7 @@
 
 .products-grid img{
    width: 100%;
-   height: 80%;
+   height: 300px;
    border:solid;
    border-width: 0.1px;
    border-color: rgba(0, 0, 0, 0.1);
@@ -66,16 +66,17 @@
 
 
  .products-grid .name{
-    margin-top: 10px;
+    margin-top: 7px;
+    margin-bottom: 2px;
     text-align: center;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 22px;
     color: black
  }
  
  .products-grid .tools{
     text-align: center;
-    font-size: 16px;
+    font-size: 20px;
     color: red;
     font-weight:bold;
 
