--- a/src/css/index.css
+++ b/src/css/index.css
@@ -166,7 +166,48 @@ a, a:visited, a:hover, a:active {
   .dropdown-content a:hover {
     background-color: #ddd;
   }
+
+  /* Splashscreen */
   
+  .index-content {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(20, 20, 53);
+    transition: 1s;
+  }
+
+  .logo-header {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
+  }
+
+  .logo {
+    position: relative;
+    display: inline-block;
+    bottom: -20px;
+    opacity: 0;
+  }
+
+  .logo.active {
+    bottom: 0;
+    opacity: 1;
+    transition: ease-in-out 0.5s;
+  }
+
+  .logo.fade {
+    bottom: 150px;
+    opacity: 0;
+    transition: ease-in-out 0.5s;
+  }
+  /* end of splashscreen */
+
   .show {
     display: block;
   }
