--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -57,7 +57,7 @@ textarea:focus {
     width: 50%;
 }
 
-button {
+#contact-submit {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
