--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,231 +1,209 @@
 html, body {
-    background-color: white;
-    font-family: 'Product Sans', sans-serif;
-    color: white;
-    height: 100%;
-    margin: 0;
+  background-color: white;
+  font-family: 'Product Sans', sans-serif;
+  height: 100%;
+  margin: 0;
 }
 
 a, a:visited, a:hover, a:active {
-    color: inherit;
-    text-decoration: none;
-  }
+  color: inherit;
+  text-decoration: none;
+}
 
 .index {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .navbar-top {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    background-color: rgb(29, 29, 75);
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  background-color: rgb(29, 29, 75);
 }
 
 .upper-nav-content {
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
-    padding-bottom: 0px;
-    margin-left: auto;
-    margin-right: 20px;
-    gap: 10px;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  padding-bottom: 0px;
+  margin-left: auto;
+  margin-right: 20px;
+  gap: 10px;
 }
 
 .upper-nav-content a {
-    font-size: 13px;
-    cursor: pointer;
-    color: darkgray;
-    margin: 5px;
+  font-size: 13px;
+  cursor: pointer;
+  color: darkgray;
+  margin: 5px;
 }
 
 .lower-nav-content {
-    display: flex;
-    flex-direction: row;
-    padding: 15px;
-    padding-top: 0px;
+  display: flex;
+  flex-direction: row;
+  padding: 15px;
+  padding-top: 0px;
 }
 
 .right-content {
-    display: flex;
-    flex-direction: row;
-    margin-left: auto;
-    margin-right: 20px;
-    font-size: 14px;
-    gap: 20px;
+  display: flex;
+  flex-direction: row;
+  margin-left: auto;
+  margin-right: 20px;
+  font-size: 14px;
+  gap: 20px;
 }
 
 .cart, .account {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-    cursor: pointer;
-    transition: 0.3s;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+  color: white;
 }
 
 .cart:hover, .account:hover {
-    color: rgb(145, 145, 185);
+  color: rgb(145, 145, 185);
 }
 
 .logo {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
+  color: white;
 }
 
 .logo img {
-    width: 50px;
-    height: 50px;
+  width: 50px;
+  height: 50px;
 }
 
 .logo-text h2 {
-    font-size: 19px;
-    margin: 0;
+  font-size: 19px;
+  margin: 0;
 }
 
 .logo-text p {
-    font-size: 12px;
-    margin: 0;
-    color: darkgray;
+  font-size: 12px;
+  margin: 0;
+  color: darkgrey;
 }
 
 .logo-text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 10px;
 }
 
 .navbar-bottom {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 35px;
-    background-color: rgb(20, 20, 53);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 35px;
+  background-color: rgb(20, 20, 53);
 }
 
 .links {
-    display: flex;
-    flex-direction: row;
-    margin-left: 25px;
-    gap: 25px;
+  display: flex;
+  flex-direction: row;
+  margin-left: 25px;
+  gap: 25px;
 }
 
 .links h5 {
-    font-size: 15px;
-    font-weight: 300;
-    margin: 0;
+  font-size: 15px;
+  font-weight: 300;
+  margin: 0;
 }
 
 .dropdown {
-    float: left;
-    overflow: hidden;
-  }
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  cursor: pointer;
+  font-size: 15px;  
+  border: none;
+  outline: none;
+  color: white;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+  transition: 0.3s;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
+  color: rgb(145, 145, 185);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  margin-top: 8px;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown i {
+  margin-left: 10px;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Splashscreen */
+.index-content{
+  padding-top: 150px;
+  background-color: rgb(29, 29, 75);
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;   
+}
+
+.splash {
   
-  .dropdown .dropbtn {
-    cursor: pointer;
-    font-size: 15px;  
-    border: none;
-    outline: none;
-    color: white;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-    transition: 0.3s;
-  }
-  
-  .navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-    color: rgb(145, 145, 185);
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    margin-top: 8px;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
+  bottom: -20px;
+  opacity: 0;
+}
 
-  .dropdown i {
-    margin-left: 10px;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
+/* end of splashscreen */
 
-  /* Splashscreen */
-  
-  .index-content {
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(20, 20, 53);
-    transition: 1s;
-  }
+.show {
+  display: block;
+}
 
-  .logo-header {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #ffffff;
-  }
+.footer {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(20, 20, 53);
+  height: 50%;
+  width: 100%;
+}
 
-  .logo {
-    position: relative;
-    display: inline-block;
-    bottom: -20px;
-    opacity: 0;
-  }
+.logo.bottom {
+  padding: 30px;
+}
 
-  .logo.active {
-    bottom: 0;
-    opacity: 1;
-    transition: ease-in-out 0.5s;
-  }
-
-  .logo.fade {
-    bottom: 150px;
-    opacity: 0;
-    transition: ease-in-out 0.5s;
-  }
-  /* end of splashscreen */
-
-  .show {
-    display: block;
-  }
-
-  .footer {
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(20, 20, 53);
-    height: 50%;
-    width: 100%;
-  }
-
-  .logo.bottom {
-    padding: 30px;
-  }
-
-  .copyright {
-    font-size: 10px;
-    color: darkgray;
-    margin: auto;
-  }
+.copyright {
+  font-size: 10px;
+  color: darkgray;
+  margin: auto;
+}
