--- a/src/css/index.css
+++ b/src/css/index.css
@@ -170,18 +170,37 @@ a, a:visited, a:hover, a:active {
 
 /* Splashscreen */
 .index-content{
-  padding-top: 150px;
-  background-color: rgb(29, 29, 75);
-  height: 500px;
+  background-color: rgb(20, 20, 53);
+  height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: row;   
 }
 
-.splash {
-  
-  bottom: -20px;
+#brand-1 {
   opacity: 0;
+}
+
+.logo-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.splash {
+  margin-top: 10px;
+  margin-bottom: 0px;
+  color: white;
+}
+
+.splash.small {
+  font-size: 15px;
+  margin-top: 5px;
+  color: lightgray;
+  opacity: 0;
+  font-weight: lighter;
 }
 
 /* end of splashscreen */
