--- a/src/css/index.css
+++ b/src/css/index.css
@@ -169,7 +169,7 @@ a, a:visited, a:hover, a:active {
 }
 
 /* Splashscreen */
-.index-content{
+.index-content.main{
   background-color: rgb(20, 20, 53);
   height: 100%;
   display: flex;
