--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -28,6 +28,8 @@ h1 {
     align-items: center;
     justify-content: center;
     border-radius: 3px;
+    padding: 1.5rem;
+    gap: 1rem;
     width: 100%;
     height: 100%;
 }
@@ -66,7 +68,7 @@ hr {
 .checkout {
     padding: 10px;
     width: 80%;
-    margin: auto;
+    margin: 0 auto 0 auto;
     border: none;
     background-color: rgb(65, 65, 124);
     color: white;
@@ -160,5 +162,6 @@ hr {
 .left {
     display: flex;
     flex-direction: row;
+    gap: 1rem;
 }
 
