--- a/src/css/login.css
+++ b/src/css/login.css
@@ -160,11 +160,12 @@ svg {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     padding: 20px;
     color: rgb(29, 29, 75);
 }
 
-button {
+#track-order {
     padding: 10px;
     border: none;
     border-radius: 5px;
@@ -173,6 +174,7 @@ button {
     font-size: 16px;
     cursor: pointer;
     transition: 0.3s;
+    margin: auto;
 }
 
 button:hover {
