--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -28,8 +28,6 @@ h1 {
     align-items: center;
     justify-content: center;
     border-radius: 3px;
-    padding: 1.5rem;
-    gap: 1rem;
     width: 100%;
     height: 100%;
 }
@@ -41,8 +39,6 @@ h1 {
     margin-right: 10px; 
     cursor: pointer;
 }
-
-
 
 .cart-summary {
     display: flex;
@@ -68,7 +64,7 @@ hr {
 .checkout {
     padding: 10px;
     width: 80%;
-    margin: 0 auto 0 auto;
+    margin: auto;
     border: none;
     background-color: rgb(65, 65, 124);
     color: white;
@@ -162,6 +158,5 @@ hr {
 .left {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
 }
 
