--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -28,6 +28,8 @@ h1 {
     align-items: center;
     justify-content: center;
     border-radius: 3px;
+    padding: 1.5rem;
+    gap: 1.5rem;
     width: 100%;
     height: 100%;
 }
